fix horizontal scroll on results page and add bootstrap rows/columns to all pages and add styles to auth pages

--- a/client/src/Pages/Results.css
+++ b/client/src/Pages/Results.css
@@ -4,6 +4,10 @@
     align-items: center;
 }
 
+.Results {
+    overflow-x: scroll;
+}
+
 #dark .table {
     color: white
 }
